--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,21 @@ header {
     color: #fff;
     padding: 30px 0;
     text-align: center;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
 }
+
+header::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('../img/hero-img-1.jpg');
+    background-position: center;
+    object-fit: cover;
+}
+
 
 header h1 {
     margin: 0;
