--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ header::before {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('../img/hero-img-1.jpg');
+    background: url('../img/hero-img-1.jpg') no-repeat;
     background-position: center;
     object-fit: cover;
 }
